# micromorph

./: 404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
API/bacteria/: index.html
API/fitting_methods/: index.html
API/measure360/: index.html
API/segmentation_utilities/: index.html
API/shape_analysis/: index.html
docs/: index.md
docs/API/: bacteria.md  fitting_methods.md  measure360.md  segmentation utilities.md  segmentation_utilities.md  shape_analysis.md
docs/napari-micromorph/: analysis.md  installation.md  segmentation.md
docs/usage/: api_example.md  batch_tools_example.md  napari_plugin_example.md
examples/: analyse_phase.py  analyse_stack.py  curvature-example.ipynb  example_analysis_notebook.ipynb
napari-micromorph/analysis/: index.html
napari-micromorph/installation/: index.html
napari-micromorph/segmentation/: index.html
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
src/micromorph/: __init__.py
test-data/: microcolony_omnisegger_example.tif
test-data/long-cells/: SC36-1.tif  SC36_mask-1.tif
test-data/multiple-cells/: example_stack.tif  example_stack_mask.tif
test-data/multiple-cells-phase/: example_phase-1.tif  example_phase_mask.tif
test-data/single-cell-phase/: 0055-0064.roi  Plot Values.csv  boundary.txt  profile.txt  single-cell-phase-mask.tif  single-cell-phase-single-mask-255.tif  single-cell-phase.tif
test-data/single-spherical-cell/: spherical-example-mask.tif  spherical-example.tif
(+35 files in other folders)
