[project]
name = "micromorph"
version = "0.1.0"
description = "Microbial Morphology analysis in Python."
readme = "README.md"
authors = [
    { name = "Simone Coppola", email = "33969789+simonecoppola@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "lmfit>=1.3.4",
    "natsort>=8.4.0",
    "omnipose>=1.0.6",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy==1.11.4",
    "shapely>=2.1.2",
    "tdqm>=0.0.1",
]

[project.optional-dependencies]
gui = [
    "pyqt6>=6.9.1",
    "qtpy>=2.4.3",
    "superqt>=0.7.6",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-video>=1.5.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
micromorph-batch = "micromorph:open_micromorph_batch_gui"

[tool.setuptools.package-data]
'src' = ['*.json']
